--- a/protego/www/templates/tab-home.html
+++ b/protego/www/templates/tab-home.html
@@ -39,7 +39,7 @@
 
     <br>
 
-    <button ui-sref="tab.account" class=" button button-block button-energized">
+    <button ui-sref="tab.account" id="btn" class=" button button-block">
      <b class="bolded">Click Here to Get Started</b>
     </button>
 
