--- a/protego/www/templates/tab-panic.html
+++ b/protego/www/templates/tab-panic.html
@@ -10,10 +10,11 @@
        'PANIC' button below!</b></p>
 <br>
 
-    <button class="button button-large button-assertive panicButton " ng-click="help()">PANIC</button>
+    <button class="button button-large panicButton " ng-click="help()">PANIC</button>
     <br>
     <br>
-    <p class="text-center">** You must be signed-in to alert your contacts</p>
+    <p class="text-center">** You must be signed-in to alert your contacts and the volume must be turned up to hear siren.</p>
+    <!-- <p class="text-center">** The volume must be turned up to play siren</p> -->
 <div>
 
 
